--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <title>First Electron App</title>
   </head>
   <body>
-    <h1>First Electron App</h1>
+    <section id="root"></section>
     <script>document.write(process.versions.electron)</script>
+    <script src="react-app.js"></script>
   </body>
 </html>
